samples/_failures_safe/1761528642_af297e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53138273.c: In function ‘main’:
./samples/SAFE/__tmp_53138273.c:140:9: error: expected expression at end of input
  140 |         if (rows2 == -
      |         ^~
./samples/SAFE/__tmp_53138273.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53138273.c:140:9: error: expected declaration or statement at end of input
